--- a/index.html
+++ b/index.html
@@ -14,12 +14,14 @@
 
 <body>
     <header class="header">
-        <nav class="navigation">
-            <a class="logo link" href="./index.html">
+    <div> class="container header-container">
+
+    <nav class="navigation">
+              <a class="logo link" href="./index.html">
                 Web<span class="accentlogo">Studio</span></a>
 
        <ul class="menu-list list">
-        <li>
+        <li class="menu-list items">
             <a class="menu-list-item link" href="./index.html">Studio</a>
         </li>
         <li>
@@ -40,7 +42,9 @@
             <a class="contact-link link" href="tel:+11(000)1111111">+11 (000) 111-11-11</a>
         </li>
        </ul>
-    </address>
+      </address>
+      </div>
+      
 
     </header>
 
@@ -50,8 +54,11 @@
          <!--HERO-->
 
         <section class="hero">
-            <h1 class="main-title">Effective Solutions <br> for Your Business</h1>
-            <button class="modal-btn" type="button">Order Service</button>
+        <div class="container">
+
+         <h1 class="main-title">Effective Solutions <br> for Your Business</h1>
+        <button class="modal-btn" type="button">Order Service</button>
+        </div>
         </section>
 
         <!--опис сайту-->
