створив стилі для портфоліо

--- a/portfolio.html
+++ b/portfolio.html
@@ -53,107 +53,132 @@
     <main>
         <!--Портфолио-->
 
-        <section class="portfolio">
-            <h1 hidden>Portfolio</h1>
+        <section class="portfolio section">
+            <div class="container">  
+            <h1 hidden>Portfolio</h1> 
             <ul class="modal-items list">
-                <li><button class="modal-btn-portfolio link " type="button">All</button></li>
-                <li><button class="modal-btn-portfolio link" type="button">Web Site</button></li>
-                <li><button class="modal-btn-portfolio link" type="button">App</button></li>
-                <li><button class="modal-btn-portfolio link" type="button">Design</button></li>
-                <li><button class="modal-btn-portfolio link" type="button">Marketing</button></li>
+                <li class="modal-btn-item">
+                    <button class="modal-btn-portfolio link " type="button">All</button></li>
+                <li class="modal-btn-item">
+                    <button class="modal-btn-portfolio link" type="button">Web Site</button></li>
+                <li class="modal-btn-item">
+                    <button class="modal-btn-portfolio link" type="button">App</button></li>
+                <li class="modal-btn-item">
+                    <button class="modal-btn-portfolio link" type="button">Design</button></li>
+                <li class="modal-btn-item">
+                    <button class="modal-btn-portfolio link" type="button">Marketing</button></li>
             </ul>
             <ul class="portfolio-list list"> 
-                <li>
+                <li class="portfolio-list-box">
                     <a class="portfolio-card link" href="">
                     <img class="portfolio-img" src="./images/portfolio/img1.jpg" 
                      alt="Banking" 
                      width="360" 
-                     height="300">
+                     height="300"></a>
+                     <div class="portfolio-wrapper">
                     <h2 class="portfolio-title">Banking App Interface Concept</h2>
                     <p class="portfolio-text">App</p>
-                </a>
+                   </div>   
+                  
                 </li>
-                <li>
+                <li class="portfolio-list-box">
                     <a class="portfolio-card link" href="">
                     <img class="portfolio-img link" src="./images/portfolio/img2.jpg"
                      alt="Cashless"
                      width="360" 
                      height="300">
+                     <div class="portfolio-wrapper">
                     <h2 class="portfolio-title">Cashless Payment</h2>
                     <p class="portfolio-text">Marketing</p>
-                </a>
+                   </div>
+                 </a>
                 </li>
-                <li>
+                <li class="portfolio-list-box">
                     <a class="portfolio-card link" href="">
                     <img class="portfolio-img" src="./images/portfolio/img3.jpg"
                      alt="Meditation"
                      width="360" 
                      height="300">
+                     <div class="portfolio-wrapper">
                     <h2 class="portfolio-title">Meditation App</h2>
                     <p class="portfolio-text">App</p>
+                </div>
                 </a>
                 </li>
-                <li>
+                <li class="portfolio-list-box">
                     <a class="portfolio-card link" href="">
                     <img class="portfolio-img link" src="./images/portfolio/img4.jpg"
                      alt="Taxi"
                      width="360" 
                      height="300">
+                     <div class="portfolio-wrapper">
                     <h2 class="portfolio-title">Taxi Service</h2>
                     <p class="portfolio-text">Marketing</p>
+                </div>
                 </a>
                 </li>
-                <li>
+                <li class="portfolio-list-box">
                     <a class="portfolio-card link" href="">
                     <img class="portfolio-img link" src="./images/portfolio/img5.jpg"
                      alt="Screen"
                      width="360" 
                      height="300">
+                     <div class="portfolio-wrapper">
                     <h2 class="portfolio-title">Screen Illustrations</h2>
                     <p class="portfolio-text">Design</p>
+                </div>
                 </a>
                 </li>
-                <li>
+                <li class="portfolio-list-box">
                     <a class="portfolio-card link" href="">
                     <img class="portfolio-img link" src="./images/portfolio/img6.jpg"
                      alt="Online"
                      width="360" 
                      height="300">
+                     <div class="portfolio-wrapper">
                     <h2 class="portfolio-title">Online Courses</h2>
                     <p class="portfolio-text">Marketing</p>
+                </div>
                 </a>
                 </li>
-                <li>
+                <li class="portfolio-list-box">
                     <a class="portfolio-card link" href="">
                     <img class="portfolio-img link" src="./images/portfolio/img7.jpg"
                      alt="Instagram"
                      width="360" 
                      height="300">
+                     <div class="portfolio-wrapper">
                     <h2 class="portfolio-title">Instagram Stories Concept</h2>
                     <p class="portfolio-text">Design</p>
+                </div>
                 </a>
                 </li>
-                <li>
+                <li class="portfolio-list-box">
                     <a class="portfolio-card link" href="">
                     <img class="portfolio-img link" src="./images/portfolio/img8.jpg"
                      alt="Organic"
                      width="360" 
                      height="300">
+                     <div class="portfolio-wrapper">
                     <h2 class="portfolio-title">Organic Food</h2>
                     <p class="portfolio-text">Web Site</p>
+                </div>
                 </a>
                 </li>
-                <li>
+                <li class="portfolio-list-box">
                     <a class="portfolio-card link" href="">
                     <img class="portfolio-img link" src="./images/portfolio/img9.jpg"
                      alt="Fresh"
                      width="360" 
                      height="300">
+                     <div class="portfolio-wrapper">
                     <h2 class="portfolio-title">Fresh Coffee</h2>
                     <p class="portfolio-text">Web Site</p>
+                </div>
                 </a>
                 </li> 
-            </ul>
+              </ul>
+             </div>
             </section>
         </main>
 
