--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
          
          <!--HERO-->
 
-        <section class="hero">
+        <section class="hero"> 
         <div class="container">
 
          <h1 class="main-title">Effective Solutions <br> for Your Business</h1>
-        <button class="modal-btn" type="button">Order Service</button>
+        <button class="modal-btn btn" type="button">Order Service</button>
         </div>
         </section>
 
@@ -173,11 +173,9 @@
 
     <footer class="contact-footer">
         <div class="container">
-        <a class="logo link" href="./index.html">
+        <a class="logo logo-footer link" href="./index.html">
             Web<span class="accentlogo-contacts">Studio</span></a>
-            <div class="contact-item">
         <p class="contact-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
-    </div>
     </div>
     </footer>
     
