--- a/portfolio.html
+++ b/portfolio.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
     <link rel="stylesheet" href="./css/styles.css">
  
 </head>
@@ -74,12 +75,12 @@
                     <img class="portfolio-img" src="./images/portfolio/img1.jpg" 
                      alt="Banking" 
                      width="360" 
-                     height="300"></a>
+                     height="300">
                      <div class="portfolio-wrapper">
                     <h2 class="portfolio-title">Banking App Interface Concept</h2>
                     <p class="portfolio-text">App</p>
                    </div>   
-                  
+                </a>
                 </li>
                 <li class="portfolio-list-box">
                     <a class="portfolio-card link" href="">
@@ -184,11 +185,9 @@
 
         <footer class="contact-footer">
             <div class="container">
-            <a class="logo link" href="./index.html">
+            <a class="logo logo-footer link" href="./index.html">
                 Web<span class="accentlogo-contacts">Studio</span></a>
-                <div class="contact-item">
             <p class="contact-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
-        </div>
         </div>
         </footer>
       
