--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <section class="hero"> 
         <div class="container">
 
-         <h1 class="main-title">Effective Solutions <br> for Your Business</h1>
+         <h1 class="main-title">Effective Solutions for Your Business</h1>
         <button class="modal-btn btn" type="button">Order Service</button>
         </div>
         </section>
@@ -65,7 +65,7 @@
 
         <section class="content section">
             <div class="container">
-             <h2 class="content-title title" hidden>content</h2>
+             <h2 class="container-title title">content</h2>  
             <ul class="content-list list">
                 <li class="content-item-box">
                     <h3 class="content-title">Strategy</h3>
