--- a/portfolio.html
+++ b/portfolio.html
@@ -56,9 +56,9 @@
 
         <section class="portfolio section">
             <div class="container">  
-            <h1 hidden>Portfolio</h1> 
+            <h1 class="container-title">Portfolio</h1> 
             <ul class="modal-items list">
-                <li class="modal-btn-item">
+                <li class="modal-btn-item"> 
                     <button class="modal-btn-portfolio link " type="button">All</button></li>
                 <li class="modal-btn-item">
                     <button class="modal-btn-portfolio link" type="button">Web Site</button></li>
@@ -184,8 +184,8 @@
         </main>
 
         <footer class="contact-footer">
-            <div class="container">
-            <a class="logo logo-footer link" href="./index.html">
+            <div class="container"> 
+            <a class="logo-footer link" href="./index.html">
                 Web<span class="accentlogo-contacts">Studio</span></a>
             <p class="contact-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
         </div>
