--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
         <!--опис сайту-->
 
         <section class="content section">
-            <div class="container">
-             <h2 class="container-title title">content</h2>  
+            <div class="container">   
+             <h2 class="visually-hidden title">content</h2>  
             <ul class="content-list list">
                 <li class="content-item-box">
                     <h3 class="content-title">Strategy</h3>
@@ -173,7 +173,7 @@
 
     <footer class="contact-footer">
         <div class="container">
-        <a class="logo logo-footer link" href="./index.html">
+        <a class="logo-footer link" href="./index.html">
             Web<span class="accentlogo-contacts">Studio</span></a>
         <p class="contact-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </div>
