--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
 
 <body>
     <header class="header">
-        <div class="container header-container">
+        <div class="container header-container"> 
     
         <nav class="navigation">
                   <a class="logo link" href="./index.html">
@@ -56,7 +56,7 @@
 
         <section class="portfolio section">
             <div class="container">  
-            <h1 class="container-title">Portfolio</h1> 
+            <h1 class="visually-hidden">Portfolio</h1> 
             <ul class="modal-items list">
                 <li class="modal-btn-item"> 
                     <button class="modal-btn-portfolio link " type="button">All</button></li>
@@ -192,5 +192,5 @@
         </footer>
       
 </body> 
-</html>
+</html> 
    
